--- a/server/package.json
+++ b/server/package.json
@@ -13,7 +13,8 @@
     "body-parser": "^1.19.0",
     "cors": "^2.8.5",
     "express": "^4.17.1",
-    "mongoose": "^5.9.27"
+    "mongoose": "^5.9.27",
+    "tmi.js": "^1.5.0"
   },
   "devDependencies": {
     "@types/cors": "^2.8.7",
